--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	],
 	"license": "GPL-3.0-or-later",
 	"require": {
-		"php": "^7||^8",
+		"php": "^7||^8"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^7||^8||^9"
